--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: GitHub Jekyll Netlify demonstration for UCLA Physical Sciences
+title: Website development & hosting with GitHub
 email: cody@pa.ucla.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Static Site Generators 
